--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -1,3 +1,3 @@
-@import "tailwindcss";
-@import "@nuxt/ui";
-@plugin "@tailwindcss/typography";
+@import 'tailwindcss';
+@import '@nuxt/ui';
+@plugin '@tailwindcss/typography';
