--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -1,3 +1,34 @@
 @import 'tailwindcss';
 @import '@nuxt/ui';
 @plugin '@tailwindcss/typography';
+
+
+:root {
+  --primary-50: 255 245 249;
+  --primary-100: 254 235 243;
+  --primary-200: 253 204 224;
+  --primary-300: 252 173 205;
+  --primary-400: 249 112 168;
+  --primary-500: 247 50 130;
+  --primary-600: 222 45 117;
+  --primary-700: 148 30 78;
+  --primary-800: 111 23 59;
+  --primary-900: 74 15 39;
+
+  --secondary-50: 243 243 243;
+  --secondary-100: 232 232 232;
+  --secondary-200: 197 197 197;
+  --secondary-300: 162 162 162;
+  --secondary-400: 92 92 92;
+  --secondary-500: 22 22 22;
+  --secondary-600: 20 20 20;
+  --secondary-700: 13 13 13;
+  --secondary-800: 10 10 10;
+  --secondary-900: 7 7 7;
+
+  --ui-primary: rgb(var(--primary-500));
+}
+
+.dark {
+  --ui-primary: rgb(var(--primary-500));
+}
